Fikset feil etter merge